syntax = "proto3";

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative api/api.proto

package api;

option go_package = "./api";

service HashService {
    rpc CreateHash (HashRequest) returns (HashResponse);
    rpc GetHash (HashRequest) returns (HashResponse);
    rpc CheckHash (HashRequest) returns (HashResponseOther);
}

message HashRequest {
    string payload = 1;
}

message HashResponse {
    string hash = 1;
}

message HashResponseOther {
    bool exists = 1;
}